--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,12 +1,10 @@
 name: Lint and Build
 
 on:
+    pull_request:
     push:
         branches:
-            - main
-    pull_request:
-        branches:
-            - main
+        - main
 
 jobs:
   lint:
@@ -21,11 +19,12 @@ jobs:
         node-version: '18.x'
 
     - name: Install Dependencies
-      run: npm ci --prefix frontend
+      working-directory: ./frontend
+      run: npm ci
 
     - name: Lint
-      
-      run: npm run lint --prefix frontend
+      working-directory: ./frontend
+      run: npm run lint
 
   build-backend:
     runs-on: ubuntu-latest
@@ -39,10 +38,12 @@ jobs:
         node-version: '18.x'
 
     - name: Install Dependencies
-      run: npm ci --prefix backend
+      working-directory: ./backend
+      run: npm ci
 
     - name: Build Backend
-      run: npm run build --prefix backend
+      working-directory: ./backend
+      run: npm run build
 
   build-frontend:
     runs-on: ubuntu-latest
@@ -56,7 +57,9 @@ jobs:
         node-version: '18.x'
 
     - name: Install Dependencies
-      run: npm ci --prefix frontend
+      working-directory: ./frontend
+      run: npm ci
 
     - name: Build Frontend
-      run: npm run build --prefix frontend
+      working-directory: ./frontend
+      run: npm run build
