--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,10 +5,11 @@
       "outDir": "dist",
       "rootDir": "src",
       "strict": true,
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "resolveJsonModule": true
     },
     "include": [
-      "src/**/*.ts"
+      "src/**/*.ts",
     ],
     "exclude": [
       "node_modules"
