--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,7 +9,7 @@
       "resolveJsonModule": true
     },
     "include": [
-      "src/**/*.ts",
+      "src/**/*.ts"
     ],
     "exclude": [
       "node_modules"
