--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "start:dev": "nodemon --watch src -e ts --exec \"ts-node\" src/index.ts",
+    "dev": "nodemon --watch src -e ts --exec \"ts-node\" src/index.ts",
     "build": "tsc",
     "watch": "tsc -w"
   },
