--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon --watch src -e ts --exec \"ts-node\" src/index.ts",
     "build": "tsc",
+    "test": "jest --forceExit --coverage --verbose --silent",
     "watch": "tsc -w"
   },
   "dependencies": {
@@ -21,7 +22,13 @@
   "devDependencies": {
     "@faker-js/faker": "^8.1.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.4",
+    "@types/supertest": "^2.0.14",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.4",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.0.0",
     "typescript": "^4.0.0"
   }
