--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,4 +1,4 @@
-name: Lint and Build
+name: Lint, Test and Build
 
 on:
     pull_request:
@@ -26,7 +26,7 @@ jobs:
       working-directory: ./frontend
       run: npm run lint
 
-  build-backend:
+  test-backend:
     runs-on: ubuntu-latest
 
     steps:
@@ -41,9 +41,9 @@ jobs:
       working-directory: ./server
       run: npm ci
 
-    - name: Build Backend
+    - name: Test Backend
       working-directory: ./server
-      run: npm run build
+      run: npm run test
 
   build-frontend:
     runs-on: ubuntu-latest
