--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -44,6 +44,25 @@ jobs:
     - name: Test Backend
       working-directory: ./server
       run: npm run test
+  
+  build-backend:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '18.x'
+
+    - name: Install Dependencies
+      working-directory: ./server
+      run: npm ci
+
+    - name: Build Backend
+      working-directory: ./server
+      run: npm run build
 
   build-frontend:
     runs-on: ubuntu-latest
